// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button matches snapshot - default 1`] = `
<button
  className="Button-ayg7nk-0 bmzHbc"
/>
`;

exports[`Button matches snapshot - large 1`] = `
<button
  className="Button-ayg7nk-0 dRYihk"
/>
`;

exports[`Button matches snapshot - link 1`] = `
<a
  className="Button-ayg7nk-0 bmzHbc"
  href="/"
>
  this is a link
</a>
`;

exports[`Button matches snapshot - medium 1`] = `
<button
  className="Button-ayg7nk-0 bmzHbc"
/>
`;

exports[`Button matches snapshot - primary 1`] = `
<button
  className="Button-ayg7nk-0 bBYlAl"
/>
`;

exports[`Button matches snapshot - secondary 1`] = `
<button
  className="Button-ayg7nk-0 hRgmRs"
/>
`;

exports[`Button matches snapshot - small 1`] = `
<button
  className="Button-ayg7nk-0 kWlfWJ"
/>
`;

exports[`ButtonLink matches snapshot (decorated and disabled) 1`] = `
<button
  className="Button__PlainButton-ayg7nk-2 Button__ButtonLink-ayg7nk-3 Rtfaq"
  disabled={true}
/>
`;

exports[`ButtonLink matches snapshot (decorated) 1`] = `
<button
  className="Button__PlainButton-ayg7nk-2 Button__ButtonLink-ayg7nk-3 flLYdq"
/>
`;

exports[`ButtonLink matches snapshot 1`] = `
<button
  className="Button__PlainButton-ayg7nk-2 Button__ButtonLink-ayg7nk-3 cXLkqS"
/>
`;
